<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">电机功能测试</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ui_settings1">LCD屏测试</string>
    <string name="ui_settings2">屏幕亮度测试</string>
    <string name="ui_settings3">TP测试</string>
    <string name="ui_settings4">WI-FI测试</string>
    <string name="ui_settings_web">网页测试</string>
    <string name="ui_settings5">摄像头测试</string>
    <string name="ui_settings6">录音测试</string>
    <string name="ui_settings7">音量测试</string>
    <string name="ui_settings8">按键测试</string>
    <string name="ui_settings9">电机测试</string>
    <string name="ui_settings10">TF卡测试</string>
    <string name="ui_settings11">距离感应测试</string>
    <string name="ui_settings12">HDMI测试</string>
    <string name="ui_settings13">G-sensor测试</string>
    <string name="ui_settings14">OTG/HOST测试</string>
    <string name="ui_settings15">灯光测试</string>
    <string name="ui_settings16">资源管理器</string>
    <string name="ui_settings17">缓存内存测试</string>

    <string name="wifi_display_options_name">名称</string>
    <string name="wifi_ssid">网络名称</string>
    <string name="wifi_ssid_hint">输入SSID</string>
    <string name="wifi_security">安全性</string>
    <string name="wifi_password">密码</string>
    <string name="credentials_password_too_short">密码至少应包含8个字符。</string>
    <string name="wifi_show_password">显示密码</string>

    <string name="storage_settings" msgid="4211799979832404953">"存储"</string>
    <string name="storage_settings_title" msgid="8746016738388094064">"存储设置"</string>
    <string name="memory_available" msgid="5052397223077021181">"可用空间"</string>
    <string name="memory_available_read_only" msgid="6497534390167920206">"可用空间（只读）"</string>
    <string name="memory_size" msgid="6629067715017232195">"总量"</string>
    <string name="memory_calculating_size" msgid="2188358544203768588">"正在计算..."</string>
    <string name="internal_storage" msgid="1584700623164275282">"存储容量"</string>
    <string name="ram_storage" msgid="1584700623164275282">"内存"</string>
    <string name="memory_apps_usage" msgid="2348501997988663688">"应用（应用数据和媒体内容）"</string>
    <string name="memory_media_usage" msgid="3738830697707880405">"媒体"</string>
    <string name="memory_downloads_usage" msgid="3755173051677533027">"下载内容"</string>
    <string name="memory_dcim_usage" msgid="558887013613822577">"图片、视频"</string>
    <string name="memory_music_usage" msgid="1363785144783011606">"音频（音乐、铃声、播客等）"</string>
    <string name="memory_media_misc_usage" msgid="235452944021647124">"其他"</string>
    <string name="memory_media_cache_usage" msgid="6704293333141177910">"缓存数据"</string>

    <string name="str_flash_name">Internal Memory</string>
    <string name="str_sdcard_name">SD Card</string>
    <string name="str_usb1_name">U S B</string>
    <string name="str_usb2_name">Storage Device</string>
    <string name="str_internal_name">Public Memory</string>
    <string name="str_sdcard_umount">SD卡已被卸载</string>
    <string name="str_flash_umount">内部存储已被卸载</string>
    <string name="str_usb1_umount">USB已被卸载</string>
    <string name="str_internal_unmount">公共存储已被卸载</string>
</resources>
